Prevent Chrome from misaligning date picker dropdown

--- a/assets/stylesheets/viewports/desktop/modules/_date-picker.scss
+++ b/assets/stylesheets/viewports/desktop/modules/_date-picker.scss
@@ -6,3 +6,8 @@
   display: inline-block;
   text-align: left;
 }
+
+// Prevent Chrome from misaligning
+.date-picker select {
+  overflow: visible;
+}
